@@ -397,6 +397,30 @@ class TestLoadCache(unittest.TestCase):
             entries, errors, options_map = loader.load_file(filename)
             self.assertEqual(1, len(warn_mock.mock_calls))
 
+    @mock.patch('beancount.loader.PICKLE_CACHE_THRESHOLD', 0.0)
+    def test_load_cache_override_filename_pattern(self):
+        orig_load_file = loader._load_file
+        prev_env = os.getenv('BEANCOUNT_LOAD_CACHE_FILENAME')
+        os.environ['BEANCOUNT_LOAD_CACHE_FILENAME'] = '__{filename}__'
+        loader.initialize()
+        try:
+            with test_utils.tempdir() as tmp:
+                test_utils.create_temporary_files(tmp, {
+                    'apples.beancount': """
+                      2014-01-01 open Assets:Apples
+                    """})
+                filename = path.join(tmp, 'apples.beancount')
+                entries, errors, options_map = loader.load_file(filename)
+                self.assertEqual({'__apples.beancount__', 'apples.beancount'},
+                                 set(os.listdir(tmp)))
+        finally:
+            # Restore pre-test values.
+            loader._load_file = orig_load_file
+            if prev_env is None:
+                del os.environ['BEANCOUNT_LOAD_CACHE_FILENAME']
+            else:
+                os.environ['BEANCOUNT_LOAD_CACHE_FILENAME'] = prev_env
+
 
 class TestEncoding(unittest.TestCase):
 
